--- a/AwesomeProject/package.json
+++ b/AwesomeProject/package.json
@@ -10,6 +10,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "@op-engineering/op-sqlite": "^6.0.0",
     "react": "18.2.0",
     "react-native": "0.74.1",
     "react-native-keys": "^0.7.10"
